--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,11 @@
-aiogram
+aiogram~=2.11.2
 py3DNS==3.2.1
 validate_email==1.3
-moneywagon
-sqlalchemy
+moneywagon~=1.22.3
+sqlalchemy~=1.3.23
+
+mnemonic~=0.19
+bip32utils~=0.3.post4
+pysendpulse~=0.1.2
+matplotlib==3.3.4
+cryptocmd~=0.6.0
