--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,12 @@
-aiogram==2.12
+aiogram==2.12.1
 py3DNS==3.2.1
 validate_email==1.3
 moneywagon~=1.22.3
-sqlalchemy==1.4.0
-
-mnemonic~=0.19
-bip32utils~=0.3.post4
+sqlalchemy==1.4.3
 pysendpulse~=0.1.2
-matplotlib==3.3.4
+matplotlib==3.4.0
 cryptocmd~=0.6.0
 pymorphy2~=0.9.1
 blockcypher~=1.0.91
 cryptos~=1.36
-requests~=2.11.1
+requests==2.25.1
