--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,11 @@ validate_email==1.3
 moneywagon~=1.22.3
 sqlalchemy==1.4.3
 pysendpulse~=0.1.2
-matplotlib==3.4.0
+matplotlib==3.3.4
 cryptocmd~=0.6.0
 pymorphy2~=0.9.1
 blockcypher~=1.0.91
 cryptos~=1.36
 requests==2.25.1
+CurrencyConverter==0.16
+emoji~=1.2.0
