--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-aiogram==2.12.1
+aiogram==2.13
 py3DNS==3.2.1
 validate_email==1.3
 moneywagon~=1.22.3
-sqlalchemy==1.4.7
+sqlalchemy==1.4.12
 matplotlib==3.4.1
 cryptocmd~=0.6.0
 pymorphy2~=0.9.1
@@ -17,3 +17,5 @@ psycopg2==2.8.6
 bs4~=0.0.1
 beautifulsoup4~=4.9.1
 aioschedule~=0.5.2
+cryptocompare~=0.7.5
+lxml
