--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,16 @@
 aiogram==2.13
 py3DNS==3.2.1
 validate_email==1.3
-moneywagon~=1.22.3
 sqlalchemy==1.4.12
 matplotlib==3.4.1
 cryptocmd~=0.6.0
 pymorphy2~=0.9.1
-blockcypher~=1.0.91
 cryptos~=1.36
 requests==2.25.1
 CurrencyConverter==0.16
 emoji~=1.2.0
 pywallet==0.1.0
-bitcoin==1.1.39
+bitcoin==1.1.39 #  не работает с более поздними версиями из-за другой системы подтверждения
 psycopg2==2.8.6
 bs4~=0.0.1
 beautifulsoup4~=4.9.1
